<resources>
    <string name="app_name">PhoneDialer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nr_1">1</string>
    <string name="nr_2">2</string>
    <string name="nr_3">3</string>
    <string name="nr_4">4</string>
    <string name="nr_5">5</string>
    <string name="nr_6">6</string>
    <string name="nr_7">7</string>
    <string name="nr_8">8</string>
    <string name="nr_9">9</string>
    <string name="nr_0">0</string>
    <string name="star">*</string>
    <string name="hash">#</string>
</resources>