<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".PhoneDialerActivity"
    android:paddingBottom="24dp"
    android:paddingTop="24dp">

    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:enabled="false"
        android:gravity="center"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:columnCount="3"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/image_button_backspace"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backspace"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_2"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_2"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_3"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_3"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_4"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_4"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_5"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_5"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_6"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_6"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_7"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_7"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_8"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_8"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_9"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_9"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_star"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/star"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_0"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nr_0"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_hash"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hash"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/image_button_call"
            android:layout_row="5"
            android:layout_column="0"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/call"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/image_button_hangup"
            android:layout_row="5"
            android:layout_column="2"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hangup"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>
    </GridLayout>
</LinearLayout>